package com.example.transaction_demo.domain.model;

import lombok.Data;

@Data
public class Category {
    private String id;
    private String name;
    private String description;
}
