package com.example.transaction_demo.domain.model;

import lombok.Data;

@Data
public class Address {
    private String id;
    private String street;
    private String city;
    private String state;
    private String zipCode;
    private String country;
}
