package com.example.transaction_demo.domain.model;

public enum PaymentStatus {
    PENDING,
    COMPLETED,
    FAILED,
    CANCELED
}
